<resources>
    <string name="app_name">Care+</string>
    <string name="no_account">No, have account? <b>SignUp</b></string>
    <string name="have_account">Already have account? <b>Login</b></string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="signup">SignUp</string>
    <string name="loggedIn">You\'re loggedIn as</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nama">Name</string>
    <string name="phone">Phone</string>
    <string name="address">address</string>
    <string name="room_available">Room available :</string>
    <string name="see_location">See location</string>
    <string name="open_on_google_maps">Open on google maps</string>
    <string name="registrasi">Registrasi</string>
    <string name="registration">Registration</string>
    <string name="label_address">Address</string>
    <string name="submit">Submit</string>
    <string name="lokasi_terms">* Lokasi anda akan digunakan untuk penjemputan</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="get_direction">Get direction</string>
    <string name="regist">Regist</string>
    <string name="success_label">Registration is successful, you just need to wait for the clerk to accept your request and we will notify you.</string>
</resources>