<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuarantineDetailActivity">

    <ImageView
        android:id="@+id/iv_place"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_title_place"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_place"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/TextAppearance.Material3.HeadlineMedium"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"/>

    <TextView
        android:id="@+id/tv_address_place"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_place"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/_20sdp"
        style="@style/TextAppearance.MaterialComponents.Caption"/>

    <ImageButton
        android:id="@+id/btn_back"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:cropToPadding="true"
        android:padding="0dp"
        android:scaleType="fitStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_round_arrow_circle_left_24"
        app:tint="@color/white" />

    <Button
        android:id="@+id/btn_see_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_location"
        app:layout_constraintTop_toBottomOf="@+id/tv_address_place"
        app:layout_constraintStart_toStartOf="parent"
        android:textAllCaps="false"
        android:layout_margin="@dimen/_20sdp"/>


</androidx.constraintlayout.widget.ConstraintLayout>